@@ -1,3 +1,2 @@
 - Add option for translating to samba friendly path names
   (especially ':')
-- Performance improvement - maybe caching the file system somehow
